<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogRegHome"
    android:background="@color/backgroundColor">

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/judulMain"
        android:layout_width="294dp"
        android:layout_height="94dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="34dp"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:text="@string/koperasi_pinjam_uang"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judulMain" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="268dp"
        android:layout_height="193dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/judulMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_ksp" />

</androidx.constraintlayout.widget.ConstraintLayout>